--- a/backend/public/index.css
+++ b/backend/public/index.css
@@ -52,7 +52,9 @@ table tr:nth-child(even) {
   padding: 10px;
   background-color: #ffffff;
   border-radius: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  margin-left: 20px;
+
   display: inline-block;
   font-size: 1.2em;
 }
@@ -137,7 +139,28 @@ button {
 }
 
 
+
 .success { color: green; }
 .redirection { color: yellow; }
 .client-error { color: red; }
 .server-error { color: red; }
+
+.info-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.left-info, .right-info {
+  display: flex;
+  flex-direction: row;
+}
+
+
+.status-point {
+  font-family: "Berlin Sans FB Demi", serif;
+  font-size: 1em;
+  font-weight: bold;
+  padding: 0;
+  margin: 0;
+}
