--- a/backend/public/index.css
+++ b/backend/public/index.css
@@ -11,6 +11,8 @@ body {
   padding: 20px;
   background-color: #fff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 h2 {
@@ -24,6 +26,8 @@ h2 {
   background-color: #e6e6e6;
   padding: 10px;
   border-radius: 5px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 table {
@@ -152,6 +156,8 @@ button {
   display: flex;
   justify-content: space-between;
   padding: 10px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .left-info, .right-info {
@@ -180,6 +186,8 @@ button {
   border-radius: 5px;
   display: inline-block;
   overflow: auto;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .error {
