--- a/backend/public/index.css
+++ b/backend/public/index.css
@@ -7,12 +7,13 @@ body {
 
 .container {
   width: 80%;
-  margin: 0 auto;
+  margin: 30px auto;
   padding: 20px;
   background-color: #fff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   overflow-wrap: break-word;
   word-wrap: break-word;
+  border-radius: 10px;
 }
 
 h2 {
@@ -118,6 +119,13 @@ table tr:nth-child(even) {
   color: #5d5b5b;
 }
 
+.devMode {
+  font-family: "Comic Sans MS", sans-serif;
+  font-size: 17px;
+  font-weight: bold;
+  color: #5d5b5b;
+}
+
 .table-head {
   /*background-color: #0c0c0c;*/
   background-color: #383838;
@@ -188,6 +196,7 @@ button {
   overflow: auto;
   overflow-wrap: break-word;
   word-wrap: break-word;
+  max-width: calc(100% - 20px);
 }
 
 .error {
@@ -220,4 +229,9 @@ button {
   word-wrap: break-word;
   overflow: auto;
 
+}
+.backArrow{
+    font-size: 1.5em;
+    color: #808080;
+    cursor: pointer;
 }
