--- a/backend/public/index.css
+++ b/backend/public/index.css
@@ -7,7 +7,7 @@ body {
 
 .container {
   width: 80%;
-  margin: 50px auto;
+  margin: 25px auto 20px;
   padding: 20px;
   background-color: #fff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -234,4 +234,8 @@ button {
     font-size: 1.5em;
     color: #808080;
     cursor: pointer;
+}
+.backArrowContainer{
+  width: 80%;
+  margin: 25px auto 0;
 }
